--- a/app/views/lessons/show.html.erb
+++ b/app/views/lessons/show.html.erb
@@ -1,5 +1,10 @@
 <h1><%= @lesson.name %></h1>
 
+<p><%= link_to "Edit", edit_lesson_path(@lesson) %></p>
+<p><%= link_to "Delete", lesson_path(@lesson),
+                         :data => {:confirm => "You sure?",
+                                   :method => "delete"} %></p>
+
 <p>
-  <%= link_to "Return to list of lessons", lessons_path %>
+  <%= link_to "Return to lessons", lessons_path %>
 </p>
