add sections to chapters, and full crud for sections

--- a/app/views/lessons/index.html.erb
+++ b/app/views/lessons/index.html.erb
@@ -7,3 +7,10 @@
 <h3>test</h3>
 
 <%= link_to "New Lesson", new_lesson_path %>
+<br>
+<%= link_to "Next Lesson", new_lesson_path %>
+
+
+
+<br>
+<%= link_to "Previous Lesson", new_lesson_path %>
