--- a/app/views/lessons/show.html.erb
+++ b/app/views/lessons/show.html.erb
@@ -5,6 +5,17 @@
                          :data => {:confirm => "You sure?",
                                    :method => "delete"} %></p>
 
+
+
+
 <p>
   <%= link_to "Return to lessons", lessons_path %>
+</p>
+<br>
+<p>
+  <%= link_to "Previous lesson", lessons_path %>
+</p>
+<br>
+<p>
+  <%= link_to "Next lessons", lessons_path %>
 </p>
