add lessons to sectionsand add full crud for lessons

--- a/app/views/lessons/index.html.erb
+++ b/app/views/lessons/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Lessons</h1>
+<!-- <h1>Lessons</h1>
 <ul>
   <% @lessons.each do |lesson|%>
     <li><%= link_to lesson.name, lesson_path(lesson)%></li>
@@ -13,4 +13,4 @@
 
 
 <br>
-<%= link_to "Previous Lesson", new_lesson_path %>
+<%= link_to "Previous Lesson", new_lesson_path %> -->
