--- a/app/views/lessons/show.html.erb
+++ b/app/views/lessons/show.html.erb
@@ -1,4 +1,4 @@
-<h1><%= @lesson.name %></h1>
+<!-- <h1><%= @lesson.name %></h1>
 
 <p><%= link_to "Edit", edit_lesson_path(@lesson) %></p>
 <p><%= link_to "Delete", lesson_path(@lesson),
@@ -18,4 +18,4 @@
 <br>
 <p>
   <%= link_to "Next lessons", lessons_path %>
-</p>
+</p> -->
