--- a/app/views/sections/show.html.erb
+++ b/app/views/sections/show.html.erb
@@ -7,6 +7,8 @@
     <% @section.lessons.each do |lesson|%>
       <li>
         <%= lesson.name %> |
+        <br>
+        <%= lesson.content %> |
         <%= link_to "Edit Section", edit_section_lesson_path(@section, lesson) %> |
         <%= link_to "Delete Section", section_lesson_path(@section, lesson),
         :data => {:confirm => "Are you sure?", :method => "delete"} %>
